--- a/src/pages/instrucciones/instrucciones.scss
+++ b/src/pages/instrucciones/instrucciones.scss
@@ -1,3 +1,10 @@
-page-instrucciones {
+item-details-page {
+
+  div.selection {
+    font-size: 22px;
+    display: block;
+    text-align: center;
+    padding-top: 5%;
+  }
 
 }
