adelanto en estilizacion

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,3 +22,19 @@
 ion-app.md{
     font-family: 'Lato', sans-serif;
 }
+
+.button-md{
+    background-color: #F8CD04;
+}
+
+.button-{
+    background-color: #F8CD04;
+}
+
+.bar-button-default-md, .bar-button-clear-md-default, .bar-button-md-default{
+    color: white;
+}
+
+.toolbar-title-md{
+   color: white;
+}
