--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
+    .swiper-slide{
+        height: 21%;
+    }
 
+    .logo{
+        width: 100%;
+        align-items:center;
+    }
 }
