personalizacion del nombre

--- a/src/pages/astroresultados/astroresultados.scss
+++ b/src/pages/astroresultados/astroresultados.scss
@@ -16,6 +16,8 @@ page-astroresultados{
     opacity: 1;
     max-width: 200px;
     text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
  }
 }
 .container {
