--- a/src/pages/numresultados/numresultados.scss
+++ b/src/pages/numresultados/numresultados.scss
@@ -18,6 +18,8 @@ page-numresultados {
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding-left: 50px;
+    padding-right: 50px;
  }
 }
 .container {
