--- a/src/pages/simuladorgiros/simuladorgiros.scss
+++ b/src/pages/simuladorgiros/simuladorgiros.scss
@@ -20,5 +20,8 @@ simuladorgiros-page {
     opacity: 1;
     max-width: 200px;
     text-align: center;
+    align-items: center;
+    padding-left: 50px;
+    padding-right: 50px;
  }
 }
