--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,5 +6,27 @@ page-home {
     .logo{
         width: 100%;
         align-items:center;
+        padding-bottom: 6px;
+        padding-top: 17px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
+
+    .myslides{
+        padding-top: 7px;
+        height: auto;
+    }
+
+    .myicon{
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        color: gold;
+        font-size: 120px;
+    }
+
+    .mycol{
+        text-align: center;
+    }
+
 }
