--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,8 +11,8 @@
         {{p.title}}
       </button>
     </ion-list>
+    <img class="logo" src="assets/images/logo2.png">
   </ion-content>
-
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
