armaParejas: agregar tabs, modifcar colores, agregar sass ganagana, padding juego, modificacion vista instrucciones, agregar armaparejasgame, correcciones de archivos sass.

--- a/src/pages/instrucciones/instrucciones.scss
+++ b/src/pages/instrucciones/instrucciones.scss
@@ -1,10 +1,21 @@
-item-details-page {
+instrucciones-page {
 
   div.selection {
     font-size: 22px;
     display: block;
     text-align: center;
     padding-top: 5%;
+  }
+
+  ion-card-header ion-item{
+    text-align: center !important; 
+  }
+  p{
+    padding: 0em;
+    text-align: justify
+  }
+  ul li {
+    margin-left: 0;
   }
 
 }
