login: correccion al entrar a la aplicacion para validar si esta o no logeado. adicion de boton de cerrar sesion

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,6 +12,9 @@
       </button>
     </ion-list>
     <img class="logo" src="assets/images/logo2.png">
+    <button menuClose ion-item (click)="cerrarSesion()">
+        Cerrar Sesion
+      </button>
   </ion-content>
 </ion-menu>
 
