--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,15 @@
 <ion-menu [content]="content">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
+    <ion-navbar>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+      <ion-buttons end>
+      <button ion-button icon-only menuClose>
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
+    </ion-navbar>
   </ion-header>
 
   <ion-content>
