--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,21 +37,21 @@ $colors: (
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
-
-
+$tabs-ios-tab-text-color-active: black;
+$tabs-ios-tab-icon-color-active: black;
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+$tabs-md-tab-text-color-active: black;
+$tabs-md-tab-icon-color-active: black;
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
+$tabs-wp-tab-text-color-active: black;
+$tabs-wp-tab-icon-color-active: black;
 
 
 // App Theme
