--- a/src/pages/armaparejasgame/armaparejasgame.scss
+++ b/src/pages/armaparejasgame/armaparejasgame.scss
@@ -1,5 +1,9 @@
 page-armaparejasgame {
     ion-nav{
-        margin-top: 25%;
+        margin-top: 25% !important;
+        height: 600px;
+        width: 100%;
+        margin-bottom: 10% !important;
+        
     }
 }
