armaParejas: correccion win. adelanto kitsuerte

--- a/src/pages/instrucciones/instrucciones.scss
+++ b/src/pages/instrucciones/instrucciones.scss
@@ -11,14 +11,9 @@ instrucciones-page {
     text-align: center !important; 
   }
   p{
-    padding: 0em;
-    text-align: center
+    padding: 0em 4.5em;
+    
   }
-  ol {
-    text-align: center;
-  }
-  ol li {
-    text-align: center;
-  }
+  
 
 }
