estilizacion al login-astrologia-formulario kit de la suerte

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,11 +17,11 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
-    </ion-list>
-    <img class="logo" src="assets/images/logo2.png">
-    <button menuClose ion-item (click)="cerrarSesion()">
-        Cerrar Sesion
+       <button menuClose ion-item (click)="cerrarSesion()">
+        Cerrar Sesión
       </button>
+    </ion-list>
+       <img class="logo" src="assets/images/logo2.png">
   </ion-content>
 </ion-menu>
 
