--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -25,3 +25,11 @@ login-page {
   }
 
 }
+
+.alert-md .alert-button{
+    background-color: #FFED00;
+    color: #015643;
+    button{
+        color: #015643;
+    }
+}
