loginkitsuerte: correccion showerrorloginj y correccion archivos duplicados kitsuerte.

--- a/src/pages/kitdelasuerte/kitdelasuerte.scss
+++ b/src/pages/kitdelasuerte/kitdelasuerte.scss
@@ -31,5 +31,6 @@ page-kitdelasuerte {
         border-style: solid;
         border-width: 5px;
         border-color: grey;
+        opacity: .2;
     }
 }
