login: edicion grafica de login y signup

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,14 +7,24 @@ login-page {
     padding-top: 5%;
   }
 
-}
-
-login-page {
-
   .headerlogin {
     padding: 10px 12px;
     height: 40px;
     text-align: center;
+  }
+
+  div .imagen{
+    text-align: center;
+  }
+
+  div .registro{
+    text-align: center;
+    padding-top: 1.5em;
+  }
+
+  p{
+    margin-left: 2em;
+    margin-right: 2em;
   }
 
 }
