--- a/src/pages/simuladorgiros/simuladorgiros.scss
+++ b/src/pages/simuladorgiros/simuladorgiros.scss
@@ -9,16 +9,17 @@ simuladorgiros-page {
 
   .numero {
     margin: 0;
-    line-height: 100px;
+    
     box-sizing: content-box;
     font-size: 5.5rem;
     color:black;
     opacity: 1;
     max-width: 200px;
-    text-align: center;
-    align-items: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
+    
+    
+    
  }
 
  ion-card-header{
