--- a/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.scss
+++ b/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.scss
@@ -1,3 +1,12 @@
 page-kitsuertewin {
+    img{
+        height: 100%;
+        width: 100%;
+        position: relative;
+        
 
+    }
+    .card-title{
+        text-align: center;
+    }
 }
