kitSuerte: boton reiniar

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,12 +39,14 @@ $colors: (
 
 $tabs-ios-tab-text-color-active: black;
 $tabs-ios-tab-icon-color-active: black;
+$popover-ios-width: 300px;
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
 $tabs-md-tab-text-color-active: black;
 $tabs-md-tab-icon-color-active: black;
+$popover-md-width: 350px;
 
 
 // App Windows Variables
