--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -6,4 +6,9 @@ signup-page{
       text-align: center;
       padding-bottom: 1em;
   }
+  .error{
+      text-align: center;
+      padding-top: .5em;
+      padding-bottom: .5em;
+  }
 }
