detalles: correccion de pequeños detalles css

--- a/src/pages/instrucciones/instrucciones.scss
+++ b/src/pages/instrucciones/instrucciones.scss
@@ -11,8 +11,17 @@ instrucciones-page {
     text-align: center !important; 
   }
   p{
-    padding: 0em 4.5em;
+    padding: 0em .5em;
     
+  }
+
+  ol{
+    margin-left: 1em;
+    margin-right: 2em;
+    
+  }
+  li{
+    padding-top: 1em;
   }
   
 
