--- a/src/pages/kitdelasuerte/complete-info/complete-info.scss
+++ b/src/pages/kitdelasuerte/complete-info/complete-info.scss
@@ -3,4 +3,7 @@ page-complete-info {
         text-align: center;
         background: color($colors, ganagana);
     }
+    p.descripcion{
+        margin-top: 1em;
+    }
 }
