--- a/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.scss
+++ b/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.scss
@@ -7,4 +7,10 @@ page-kit-suerte-popover {
     ion-item-group{
         margin-top: 10px;
     }
+    p{
+        padding-top: 1.5em;
+        padding-bottom: 1em;
+        padding-left: .3em;
+        padding-right: .3em;
+    }
 }
