--- a/src/pages/kitdelasuerte/kitdelasuerte.scss
+++ b/src/pages/kitdelasuerte/kitdelasuerte.scss
@@ -10,13 +10,12 @@ page-kitdelasuerte {
         
 
     }
-    
+
+
     .amuletos{
-        width: 140px;
-        overflow: hidden;
-        padding-bottom: 5px;
-        padding-left: 0.5em;
-        padding: 1px;
+        width: 50%;
+        margin: 0;
+
         float: left;
         
     }
