--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,15 +37,19 @@ $colors: (
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-$tabs-ios-tab-text-color-active: black;
-$tabs-ios-tab-icon-color-active: black;
+$tabs-ios-tab-text-color-active: 222;
+$tabs-ios-tab-icon-color-active: 222;
+$tabs-ios-tab-text-color: #222;
+$tabs-ios-tab-icon-color: #222;
 $popover-ios-width: 300px;
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-$tabs-md-tab-text-color-active: black;
-$tabs-md-tab-icon-color-active: black;
+$tabs-md-tab-text-color-active: #222;
+$tabs-md-tab-icon-color-active: #222;
+$tabs-md-tab-text-color: #222;
+$tabs-md-tab-icon-color: #222;
 $popover-md-width: 350px;
 
 
